add a couple more tests

--- a/test/test.jade
+++ b/test/test.jade
@@ -34,7 +34,7 @@ section(data-ng-init="info2 = {header: 'info 2', content: 'content 2'}")
   +label('info2', 'content')
   button(data-ng-click="open()") OPEN 1
   button(data-sl-modal) OPEN 2
-  div
+  div.test
     +label('info2', 'header')
     +label('info2', 'content')
     button(data-ng-click="close()") CLOSE
